--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: ponto-servidor
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src: app:app
+    startCommand: gunicorn src.app:app
